Implement feature #2:Add expense to CSV (#27)
* implement:add append method

* Modify code

* Add test code

* Execute mvn test

* chore: Apply stash changes including pom.xml update and gitignore

* add test code - again

* Final contents before merging to main

* Add edge_case

* Final contents before merging to main

* Final contents before merging to main

* fix test code

* Chore: Remove build artifacts and revert .gitignore

* modify arraylist -> list & assign UTF-8

* reflect review3 feedback - added CSV field conversion helper

* use StandardCharsets.UTF_8 to read file in test

* refactor: Modifying the test method name

* use tempDir for path in test

* revert 'other files' into original form

* modify ArrayList -> List

* add CSV field conversion helper

* Revert "add CSV field conversion helper"

This reverts commit 8afa5daba3b2243f8f5540ea4057e6c76b0c9636.

* add CSV field conversion helper

* Stop tracking .vscode/settings.json file

* Update .gitignore

---------

Co-authored-by: na hyanghee <gidgml514863@gmail.com>
Co-authored-by: Lee, Jiseop <ljseop1030@gmail.com>